Fix color contrasts

--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -2,12 +2,13 @@ $breakpoint: 1024px !default;
 
 .body {
   --color-background: #eaeaea;
-  --color-highlight: #f10000;
+  --color-highlight: #cd0000;
   --color-nav-background: #373737;
+  --color-nav-links: #ff7979;
   --color-text: #333;
   --color-heading: #000;
   --color-highlight-text: #fff;
-  --color-links: #f10000;
+  --color-links: #cd0000;
   min-height: 100vh;
 }
 
@@ -17,4 +18,5 @@ $breakpoint: 1024px !default;
   --color-background: #373737;
   --color-nav-background: #eaeaea;
   --color-links: #ff7979;
+  --color-nav-links: #cd0000;
 }
