--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -180,7 +180,7 @@ a {
 }
 
 .nav__link {
-  color: var(--color-highlight);
+  color: var(--color-nav-links);
 
   &:hover,
   &:focus,
@@ -198,3 +198,4 @@ a {
 
   }
 }
+
